# quick-shorts

./: .gitignore  README.md  __main__.py  design.tldr
backend/: manage.py  postman-collection.json  pyproject.toml  requirements.txt
backend/apps/google_auth/: apps.py  urls.py  views.py
backend/apps/short_video/: admin.py  apps.py  filters.py  permissions.py  urls.py
backend/apps/shorts/: admin.py  filters.py  permissions.py  (+1 more)
backend/apps_config/: asgi.py  urls.py  views.py
backend/backend/: asgi.py  exceptions.py  settings.py  urls.py  views.py  wsgi.py
backend/exceptions/: __init__.py  exceptions.py
backend/last_request_log/: admin.py  apps.py  models.py
backend/middleware/: __init__.py  response_time_middleware.py
backend/middlewares/: __init__.py  response_middleware.py
backend/permissions/: __init__.py  allow_any.py  django_model_permissions.py  is_admin_user.py  is_authenticated.py  is_email_verified.py  is_owner.py  is_verified.py
backend/quick_api_view/: __init__.py  get_meta.py  quick_api_view.py  response.py  types.py
backend/records/: comments.json  follows.json  likes.json  reports.json  short_videos.json  tags.json  users.json  videos.json  views.json
backend/templates/: index.html
backend/throttles/: __init__.py  anon_rate_throttle.py  user_rate_throttle.py
backend/throttling/: __init__.py  anon_rate_throttle.py  auth_rate_throttle.py  user_rate_throttle.py
backend/users/: adapters.py  admin.py  apps.py  forms.py  models.py  response.py  serializers.py  urls.py  views.py
backend/utils/: __init__.py  add_query_params.py  field_validator.py  get_client_ip.py  response.py  send_email.py  token_generator.py
(+686 files in other folders)
